# registry

./: .gitignore  .prettierrc  Cargo.toml  LICENSE  README.md  compose.yaml  dev.dockerfile  diesel.toml  eslint.config.js  flake.nix  justfile  package.json  postcss.config.cjs  tailwind.config.js
_registry/chapters/: 12_english.json  12_maths.json  12_physics.json
_registry/jee-advanced/: _index.json
_registry/jee-advanced/chemistry/: _index.json  alcohols-phenols-and-ethers.json  aldehydes-ketones-and-carboxylic-acids.json  basics-of-organic-chemistry.json  biomolecules.json  hydrogen.json  (+26 more)
_registry/jee-main/: _index.json
_registry/jee_mains/: _index.json
_registry/neet/: _index.json
dataset/: classes.json  subjects.json
dataset/_questions/: 12_english.json
dataset/chapters/: 11_biology.json  11_chemistry.json  11_english.json  11_maths.json  11_physical_education.json  11_physics.json  12_biology.json  12_chemistry.json  12_english.json  12_maths.json  12_physical_education.json  12_physics.json
migrations/2025-04-06-090738_base/: down.sql  up.sql
registry/chapters/: 11_chemistry.json  11_maths.json  12_chemistry.json
src/: error.rs  lib.rs  main.rs  models.rs  schema.rs  tables.rs  test_models.rs  utils.rs
src/cli/: mod.rs
src/database/: mod.rs
src/handlers/: error.rs  mod.rs
src/registry/: mod.rs  mod.rs.bak  reg_models.rs
src/server/: mod.rs
src/templates/: mod.rs
src/test/: models.rs
static/: franken-ui.core.iife.js  franken-ui.icon.iife.js  style.css
static/scripts/: chapter-page.js  render-mathjax.js
templates/: index.html
(+240 files in other folders)
