[package]
name = "raesan-registry"
version = "0.0.1"
edition = "2021"

[lib]
name = "raesan_registry"
path = "src/lib.rs"

[[bin]]
name = "raesan_registry-bin"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
uuid = { version = "1.16.0", features = ["v4"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
